# tds_project_2

./: README.md  autolysis.py  goodreads_README.md  happiness_README.md  media_README.md  missing_data_summary.txt  pyproject.toml
goodreads/: goodreads_README.md
happiness/: README.md
media/: README.md  media_README.md
